Fix alignmnet of offer text on big screens

--- a/source/stylesheets/layout/_offers.scss
+++ b/source/stylesheets/layout/_offers.scss
@@ -308,7 +308,7 @@
   }
   @include susy-breakpoint($break-offer-intro) {
     p {
-      margin-top: 25%;
+      margin-top: 15vw;
     }
   }
 }
